[gd_scene load_steps=9 format=3 uid="uid://uja72jj70mhw"]

[ext_resource type="Script" path="res://Weapons_and_bullets/Weapons/Weapon.gd" id="1_sypte"]
[ext_resource type="Texture2D" uid="uid://qpgc2uajw6tx" path="res://Weapons_and_bullets/Weapons/[SHOOTING]PistolV1.00.png" id="2_a724k"]
[ext_resource type="Texture2D" uid="uid://cni0slyfbcm4v" path="res://Weapons_and_bullets/Weapons/[FULL]PistolV1.01.png" id="3_d1kaw"]

[sub_resource type="Animation" id="Animation_7vcxm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon_sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_a724k")]
}

[sub_resource type="Animation" id="Animation_kvkh5"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon_sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.666667),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_a724k")]
}

[sub_resource type="Animation" id="Animation_mmjhg"]
resource_name = "shoot"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.166767, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.37),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 0, 6, 7, 8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon_sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_d1kaw")]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.166667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spwan_weapon"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lkgun"]
_data = {
"RESET": SubResource("Animation_7vcxm"),
"idle": SubResource("Animation_kvkh5"),
"shoot": SubResource("Animation_mmjhg")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e0nyn"]
size = Vector2(8, 6)

[node name="Weapon" type="StaticBody2D"]
script = ExtResource("1_sypte")

[node name="Weapon_sprite" type="Sprite2D" parent="."]
position = Vector2(32, 1)
texture = ExtResource("2_a724k")
hframes = 12

[node name="Weapon_animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lkgun")
}
autoplay = "idle"

[node name="Bullet_spawn" type="CollisionShape2D" parent="."]
position = Vector2(35, -2)
shape = SubResource("RectangleShape2D_e0nyn")
disabled = true

[connection signal="animation_finished" from="Weapon_animation" to="." method="_on_animation_finished"]
